@@ -4,5 +4,5 @@ export prsys
 
 sub prsys
 ? cat(1);"Predefined Variables";cat(0)
-? "PI     ="; pi
+? "PI     ="; 3.14159265358979
 end
